# ARIA

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  main.py  pyproject.toml  start.ps1
.mermaid/: README_1772023146_14.mmd  README_1772023146_19.mmd  README_1772023146_8.mmd  README_1772039934_3.mmd  README_1772039999_14.mmd  README_1772039999_17.mmd  README_1772040006_18.mmd  README_1772040006_20.mmd  README_1772040006_22.mmd  README_1772040006_24.mmd  README_1772311017_96.mmd  README_1772311020_103.mmd  README_1772311020_104.mmd  README_1772311069_125.mmd  README_1772311073_133.mmd  README_1772311073_134.mmd  README_credential_resolver.mmd
benchmarks/: REPORT.md  build_cycle_scenarios.py  config_loader.py  generate_golden_dataset.py  golden_dataset.json  main.py  metrics.py  report.py  runner.py  scenario_definitions.py  schema.py
benchmarks/adapters/: base.py  (+4 more)
frontend/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
outputs/: boundary_test_20260224_115016.json  boundary_test_20260224_115210.json  boundary_test_20260224_115400.json  build_cycle_test_20260224_121134.json  build_cycle_test_20260224_122821.json  demo_new_features_20260224_123202.json  demo_new_features_20260224_123217.json  demo_run_20260223_212900.json  e2e_test_20260224_123050.json  e2e_test_20260224_123450.json  preflight_test_20260224_115530.json  preflight_test_20260224_120926.json
scripts/: _benchmark_build_fixtures.py  _run_simple_benchmark.py  benchmark_build_cycle.py
tests/: conftest.py
(+306 files in other folders)
