[project]
name = "aria"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # HTTP + scraping
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.44.0",
    # Vector DB
    "chromadb>=0.5.0",
    # Redis
    "redis>=5.0.0",
    # Anthropic / LLM
    "anthropic>=0.28.0",
    "langgraph>=0.1.0",
]
