[project]
name = "aria"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # HTTP + scraping
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.44.0",
    # Vector DB
    "langchain-chroma>=0.2.0",
    # Redis
    "redis>=5.0.0",
    # LLM
    "langchain>=1.2.10",
    "langchain-core>=1.2.14",
    "langchain-google-genai>=4.1.3",
    "langgraph>=1.0.9",
    "google-genai>=1.0.0",
    "rank-bm25>=0.2.2",
    "langchain-community>=0.4.1",
]
